--- a/Robot-Dog/frontend/web_example/app/src/main/res/layout/activity_main.xml
+++ b/Robot-Dog/frontend/web_example/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:orientation="vertical" >
+    android:background="#29000000">
 
-
+    <include layout="@layout/my_video_background" />
 
 <TextView
         android:id="@+id/text_view_result"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_height="5dp"
         android:text="Hello World!"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="5dp"
         />
-
-    <Button
-        android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:text="Submit" />
 
     <EditText
         android:id="@+id/oddEvenInput"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:ems="10"
+        android:layout_height="10dp"
+        android:ems="6"
         android:hint="Number"
         android:inputType="number"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="5dp"
         />
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:text="Submit"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="5dp"/>
 
     <com.google.android.material.slider.Slider
         android:id="@+id/slider"
@@ -46,21 +49,10 @@
         android:valueTo="100.0"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="5dp"
         />
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
-    <Button
-        android:id="@+id/buttonLoadPicture"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_gravity="center"
-        android:text="Load Picture"
-        android:layout_weight="1"
-         />
 
 
-</LinearLayout>
+
+</RelativeLayout>
