--- a/Robot-Dog/frontend/web_example/app/src/main/res/layout/activity_main.xml
+++ b/Robot-Dog/frontend/web_example/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".TestActivity">
 
-    <TextView
+    <!-- <TextView
         android:id="@+id/text_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -120,6 +120,8 @@
         android:text="Navigate to a different page"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" /> -->
+
+    <include layout="@layout/bottom_sheet" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
